# rhobot

./: .gitignore  CMakeLists.txt  README.md  differential_steering_demo.cpp  motor_test.cpp  pwm_setup.sh  re_cmake.sh  rhobot.cpp  rhobot.h  test_camera.cpp  test_differential_steering.cpp  test_lidar.cpp  test_motors.cpp
CAD/: lower_A.stl  lower_B.stl  lower_full.stl  middle_full.stl  upper_A.stl  upper_B.stl  upper_full.stl
CAD/split components/: lower_A.stl  lower_B.stl  middle_A.stl  middle_B.stl  upper_A.stl  upper_B.stl
PCB/: rhobot_circuit_v2.kicad_pcb  rhobot_circuit_v2.kicad_pro  rhobot_circuit_v2.kicad_sch  rhobot_circuit_v2.net
PCB/rhobot_circuit/: fp-info-cache  rhobot_circuit.kicad_pcb  rhobot_circuit.kicad_prl  rhobot_circuit.kicad_pro  rhobot_circuit.kicad_sch  rhobot_circuit.net
demos/: CMakeLists.txt
src/: rhobot.cpp
tests/: CMakeLists.txt  motor_test.cpp  pin_out_test.cpp  rotary_encoder_test.cpp
